# Processamento-de-Imagens_E01_Grupo04

./: README.md
src/: .gitignore  Carregamento_de_imagem.ipynb  Carregamento_de_imagems.ipynb  Gabriel - Canny.ipynb  Gaussiano_e_Bilateral-semana03.ipynb  Gaussiano_e_Bilateral.ipynb  Media_e_Mediana (1).ipynb  Media_e_Mediana.ipynb  detecção_de_bordas.ipynb  exceptions.py  principal.py  pyproject.toml  validacao.py
src/filtros/: deteccao_bordas.py  filtros_blur.py  utilitarios.py
src/modelos/: esquemas.py
